Comment console.log in Chat, Edit ChatResponse jsx and css.

--- a/src/component/chatResponse.css
+++ b/src/component/chatResponse.css
@@ -73,3 +73,11 @@ ul {
 li {
     margin-bottom: 5px;
 }
+
+.custom-pre {
+    background: transparent !important;
+    border: none !important;
+    padding: 0 !important;
+    margin: 0 !important;
+  }
+  
