--- a/src/index.css
+++ b/src/index.css
@@ -82,7 +82,8 @@ input[type="number"]:focus {
 
 @media (min-width: 1280px) {
   .custom-scrollbar-sidebar-height {
-    max-height: 60vh; /* 60% of viewport height */
+    /*max-height: 60vh; /* 60% of viewport height */
+    max-height: 70vh; /* 60% of viewport height */
   }
 }
 
