when in mobile, use width fully. Comment some part in chatresponse.css. Add horizontal bar to syntaxhighlighter in chatresponse.jsx

--- a/src/component/chatResponse.css
+++ b/src/component/chatResponse.css
@@ -105,13 +105,13 @@ li {
     margin: 8px 0px !important;
   }
 
-.chatResponse {
+/* .chatResponse {
     font-size: 16px;
-}
-
+} */
+/* 
 .codeFont {
     font-size: 14px;
-}
+} */
 
 .chatResponseLi {
     font-size: 20px;
